--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ builds/preproc/ctags_target_for_gcc_minus_e.cpp
 builds/sketch/move_1_servo.ino.cpp
 builds/sketch/move_1_servo.ino.cpp.d
 builds/sketch/move_1_servo.ino.cpp.o
+.vscode/arduino.json
+.vscode/c_cpp_properties.json
